tests/dataset/tpc-ds/compiler/pl/q19.error
run: exit status 2
[
  {
    "ext_price":0,
    "i_brand":"B1",
    "i_brand_id":1,
    "i_manufact":"M1",
    "i_manufact_id":1
  }
]
ERROR: /tmp/q19.pl:58: user:main Unknown message: error('expect failed')
